--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Ubuntu', sans-serif;
+  background-color: rgb(250, 235, 208);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card {
+  border: none !important;
+  border-radius: 0 !important;
+}
+
+.photo-md{
+  width: 190px;
+  height: 240px;
+}
+.nameProduct {
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    color: #53382c;
+    max-height: 52px;
+    overflow: hidden;
+    display: block;
+    font-family: 'fontkhachhang';
+}
+.price {
+
+    text-transform: uppercase;
+    font-weight: bolder;
+    color: #53382c;
+    max-height: 52px;
+    overflow: hidden;
 }
