--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ body {
   width: 190px;
   height: 240px;
 }
+.photo-lg{
+  width: 230px;
+  height: 300px;
+}
 .nameProduct {
     font-size: 18px;
     line-height: 26px;
@@ -33,4 +37,19 @@ body {
     color: #53382c;
     max-height: 52px;
     overflow: hidden;
+}
+.loading {
+  width: 100px;
+}
+.zoom {
+  transition: transform .3s;
+  padding: 8px;
+  overflow: hidden;
+  border-radius: 20px;
+}
+
+.zoom:hover {
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1); 
 }
